# terminal-media

./: .gitignore  CMakeLists.txt
cmake/: SystemVariables.cmake  TerminalCommon.cmake
cmake/Config/: Darwin_config.cmake  Linux_config.cmake
cmake/Modules/: .libxmlConfig.cmake.swp  aoConfig.cmake  boostConfig.cmake  cursesConfig.cmake  libxmlConfig.cmake  mpg123Config.cmake  sqliteConfig.cmake
core/: CMakeLists.txt  Logger.cpp
include/terminal/core/: Logger.hpp
include/terminal/media/: Media.hpp  MediaPlayer.hpp  Module.hpp  Plugin.hpp  PluginManager.hpp  pimpl.hpp
include/terminal/media/api/: IAudioPlayer.hpp  IExtension.hpp  IExtensionFactory.hpp  ILibraryManager.hpp  IPlugin.hpp  IRegistrar.hpp  Types.hpp
include/terminal/media/config/: IAttribute.hpp  ISerializer.hpp  ObjectAttribute.hpp
include/terminal/media/impl/: Module.hpp  Plugin.hpp  PluginManager.hpp  PluginRegistrar.hpp
include/terminal/media/model/: AbstractAlbum.hpp  AbstractArtist.hpp  AbstractAudioResource.hpp  AbstractLibrary.hpp  AbstractMediaResource.hpp  AlbumListener.hpp  AudioResource.hpp  IPlayable.hpp
include/terminal/media/player/: Album.hpp  Artist.hpp  ArtistListener.hpp  AudioResource.hpp  IPlayable.hpp  Library.hpp  MediaPlayer.hpp  MediaResource.hpp
include/terminal/media/plugin/: IAudioPlayer.hpp  ILibraryManager.hpp  IPlugin.hpp  IPluginArtefact.hpp  IRegistrar.hpp  Types.hpp
player/: .cproject  .project  CMakeLists.txt  main.cpp
player/config/: IAttribute.cpp  ISerializable.cpp  ISerializer.cpp  StringAttribute.cpp
player/config/xml/: XMLSerializer.cpp
player/import/: banshee.cpp
player/include/terminal/media/: Album.hpp  AlbumListener.hpp  Artist.hpp  ArtistListener.hpp  AudioResource.hpp  ImportableLibrary.hpp  Library.hpp  Logger.hpp  Media.hpp  MediaResource.hpp  Module.hpp  Plugin.hpp
player/include/terminal/media/config/: XMLSerializer.hpp
player/model/: AbstractAlbum.cpp  AbstractArtist.cpp  AbstractAudioResource.cpp  AbstractLibrary.cpp  AbstractMediaResource.cpp  Album.cpp  Artist.cpp  AudioResource.cpp  Library.cpp  MediaResource.cpp
player/plugins/: CMakeLists.txt  Module.cpp
player/plugins/banshee/: CMakeLists.txt  Library.hpp  Reader.cpp
player/system/: Logger.cpp  MediaPlayer.cpp  Module.cpp  Plugin.cpp  PluginLoader.cpp  PluginManager.cpp  PluginRegistrar.cpp  PluginRegistrar.hpp  Profile.cpp
plugins/: CMakeLists.txt
plugins/ao/: AOPlayer.cpp  AOPlayer.hpp  AudioPlayer.cpp  AudioPlayer.hpp  CMakeLists.txt  ExtensionFactory.cpp  ExtensionFactory.hpp  Plugin.cpp
plugins/banshee/: BansheeFactory.cpp  BansheeFactory.hpp  BansheeLibrary.cpp  BansheeLibrary.hpp  CMakeLists.txt  ExtensionFactory.cpp  ExtensionFactory.hpp  Library.cpp  Library.hpp  LibraryManager.cpp  LibraryManager.hpp  Plugin.cpp  Reader.cpp  Reader.hpp
plugins/banshee/model/banshee/: Album.cpp  Album.hpp  Artist.cpp  Artist.hpp  AudioResource.cpp  AudioResource.hpp  Library.cpp  Library.hpp
plugins/itunes/: CMakeLists.txt  Plugin.cpp
plugins/itunes/xml/: XMLReader.cpp
plugins/mpg123/: AudioPlayer.cpp  AudioPlayer.hpp  CMakeLists.txt  ExtensionFactory.cpp  ExtensionFactory.hpp  Plugin.cpp
